# box

./: .bazelrc  .gitignore  Android.mk  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  anbox_deps_setup.bzl
android/camera/: EmulatedCamera.h
android/device/anbox/: anbox_armv7a_neon.mk
android/device/xbox/: Android.mk  AndroidProducts.mk  BoardConfig.mk  README.md  audio_policy_configuration.xml  device.mk  graphics.mk  init.xbox.rc  security.mk  vendorsetup.sh  xbox.mk
android/fingerprint/: Android.mk
android/hardware/: Android.mk  CMakeLists.txt
android/hwcomposer/: hwcomposer.cpp
android/power/: Android.mk
android/qemu-props/: Android.mk
android/vibrator/: Android.mk  vibrator_qemu.c
bazel/: BUILD.arrow  BUILD.redis  anbox.bzl  anbox_deps_build_all.bzl  anbox_deps_setup.bzl  path_utils.bzl  python.bzl  repo.bzl
docker/: Dockerfile
docs/: build.md  development.md  generate-emugl-source.md
etc/xbox/: _drivers.sh  _fs.sh  _network.sh  _setup.sh  app-appmgr.sh  env.sh  fs.sh  start.sh
etc/xbox/helper/: app-android-settings.sh  create-package.sh
products/anbox/: anbox.mk  anbox_arm64.mk  anbox_x86_64.mk
scripts/: create-package.sh  gen-emugl-headers.sh  update-emugl-sources.sh
src/: BUILD  CMakeLists.txt  stub.cpp
src/anbox/: BUILD  anbox.bzl  cli.cpp  cli.h  daemon.cpp  do_not_copy_or_move.h  logger.cpp  logger.h  runtime.cpp  runtime.h  system_configuration.cpp  system_configuration.h  utils.cpp
src/anbox/android/: intent.cpp  intent.h  ip_config_builder.cpp  (+1 more)
src/npu/: BUILD
src/xbox/: BUILD
tests/: CMakeLists.txt
(+212 files in other folders)
